--- a/about-us-rtl.html
+++ b/about-us-rtl.html
@@ -321,7 +321,7 @@
                 </a>
             </div>
             <div class="section-field wow fadeInLeft" data-wow-duration="0.4s" data-wow-delay="0.4s">
-                <a href="hotel-guest.html">
+                <a href="hotel-guest-rtl.html">
                     <h2>
                         <i class="fas fa-chevron-left"></i>
                         تقرير بنزلاء فندقى
@@ -330,7 +330,7 @@
                 </a>
             </div>
             <div class="section-field  wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.5s">
-                <a href="cities.html">
+                <a href="cities-rtl.html">
                     <h2>
                         <i class="fas fa-chevron-left"></i>
                         تقرير مُدنى الفندقيه
@@ -338,7 +338,7 @@
                 </a>
             </div>
             <div class="section-field  wow fadeInLeft" data-wow-duration="0.6s" data-wow-delay="0.6s">
-                <a href="hotel-rooms.html">
+                <a href="hotel-rooms-rtl.html">
                     <h2>
                         <i class="fas fa-chevron-left"></i>
                         تقرير الغرف الفندقيه
@@ -356,7 +356,7 @@
                 </a>
             </div>
             <div class="section-field  wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.8s">
-                <a href="withdraw-profits.html">
+                <a href="withdraw-profits-rtl.html">
                     <h2>
                         <i class="fas fa-chevron-left"></i>
                         طلب الأرباح
