done by me Inshallah

--- a/register-new-guest-rtl-2.html
+++ b/register-new-guest-rtl-2.html
@@ -420,7 +420,7 @@
                 <div class="checkbox">
                     <input type="checkbox" name="terms" required>
                     <span>أوافق على شروط و بنود التعاقد الألكترونى
-                        <a href="https://www.pyramid-challenge.com/terms-conditions"> الأطلاع على شروط و بنود التعاقد</a></span>
+                        <a href="https://ar.pyramid-challenge.com/terms-conditions"> الأطلاع على شروط و بنود التعاقد</a></span>
                 </div>
             </div>
 
@@ -433,13 +433,13 @@
     <div class="container">
         <div class="copyright">
             <h3>
-                <a href="https://www.pyramid-challenge.com/terms-conditions">
-                    Copyright© Direct. All Rights Reserved.terms&conditions
+                <a href="https://ar.pyramid-challenge.com/terms-conditions ">
+                    شركة دايركت © جميع الحقوق محفوظه . شروط و بنود
                 </a>
             </h3>
         </div>
         <div class="copyright-logo">
-            <a href="https://www.pyramid-challenge.com/terms-conditions">
+            <a href="https://ar.pyramid-challenge.com/terms-conditions ">
                 <img src="img/footer-logo.png"  class="wow fadeInLeft" data-wow-duraton="2s"  alt="footer-logo">
             </a>
         </div>
