added one more issue

--- a/register-new-guest-rtl.html
+++ b/register-new-guest-rtl.html
@@ -44,17 +44,17 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="cities.html">English</a>
+                        <a class="lang-text" href="register-new-guest.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="cities-rtl.html">Arabic</a>
+                            <a class="lang-text" href="register-new-guest-rtl.html">Arabic</a>
                         </div>
 
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
+                    <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
                     <a  href="index-rtl.html">
@@ -226,11 +226,11 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="cities.html">English</a>
+                            <a class="lang-text" href="register-new-guest.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="cities-rtl.html">Arabic</a>
+                                <a class="lang-text" href="register-new-guest-rtl.html">Arabic</a>
                             </div>
 
                         </div>
