added it until last link

--- a/hotel-guest-rtl.html
+++ b/hotel-guest-rtl.html
@@ -299,7 +299,7 @@
    <div id="guest">
        <div class="container">
            <div class="section-back">
-               <a href="about-us.html">الرجوع لأقسام الفندق </a>
+               <a href="about-us-rtl.html">الرجوع لأقسام الفندق </a>
            </div>
        </div>
        <div class="container">
