--- a/hotel-rooms-rtl.html
+++ b/hotel-rooms-rtl.html
@@ -407,7 +407,7 @@
    <div id="rooms">
        <div class="container">
            <div class="section-back">
-               <a href="about-us.html">
+               <a href="about-us-rtl.html">
                    الرجوع لأقسام الفندق
                </a>
            </div>
