--- a/index-rtl.html
+++ b/index-rtl.html
@@ -312,9 +312,12 @@
                 <label for="password"></label>
                 <input type="password" class="form-control"  id="password" placeholder=" أدخل كلمة السر لفندقك ">
             </div>
+            <a href="about-us-rtl.html">
             <button class="submit ">دخول حساب فندقى
+                
                 <i class="fas fa-chevron-right"></i>
             </button>
+            </a>
             <a class="forget-pass" href="https://ar.pyramid-challenge.com/contact-us">
                 إذا لم تتذكر كلمة السر أو رقم فندقك , أضغط هنا
             </a>
