--- a/index.html
+++ b/index.html
@@ -298,9 +298,9 @@
                 <label for="password"></label>
                 <input type="password" class="form-control"  id="password" placeholder="Enter your hotel password">
             </div>
-            <button class="submit ">Sign In
+            <a class="submit " href="about-us.html">Sign In
                 <i class="fas fa-chevron-right"></i>
-            </button>
+            </a>
             <a class="forget-pass" href="https://www.pyramid-challenge.com/contact-us">
                 if you forgot your password or your hotel number , click here
             </a>
