we did final link Insallah

--- a/index-rtl.html
+++ b/index-rtl.html
@@ -313,10 +313,12 @@
                 <input type="password" class="form-control"  id="password" placeholder=" أدخل كلمة السر لفندقك ">
             </div>
             <a href="about-us-rtl.html">
-            <button class="submit ">دخول حساب فندقى
-                
-                <i class="fas fa-chevron-right"></i>
-            </button>
+           <div class="button">
+               <a class="submit " href="about-us-rtl.html">دخول حساب فندقى
+
+                   <i class="fas fa-chevron-right"></i>
+               </a>
+           </div>
             </a>
             <a class="forget-pass" href="https://ar.pyramid-challenge.com/contact-us">
                 إذا لم تتذكر كلمة السر أو رقم فندقك , أضغط هنا
