added most tips at friday

--- a/index-rtl.html
+++ b/index-rtl.html
@@ -297,7 +297,7 @@
 <section id="form">
     <div class="form-title">
         <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-            <a href="index.html">     تسجيل دخول على حساب فندقك
+            <a href="index-rtl.html">     تسجيل دخول على حساب فندقك
             </a></h2>
     </div>
 
