--- a/register-new-guest-rtl.html
+++ b/register-new-guest-rtl.html
@@ -67,6 +67,94 @@
 
     </div>
 
+    <nav class="nav-bottom">
+        <ul  >
+            <li><a href="https://ar.pyramid-challenge.com/">
+                الرئيسيه
+            </a></li>
+            <li><a href="https://ar.pyramid-challenge.com/about-us">
+                عن الشركه
+            </a></li>
+            <li><a href="https://ar.pyramid-challenge.com/buy-digital-key">
+                شراء مفتاح رقمى
+            </a></li>
+            <li><a href="https://ar.pyramid-challenge.com/ar-faq ">
+                أسئله و أجابه
+            </a></li>
+            <li><a href=" https://ar.pyramid-challenge.com/contact-us">
+                أتصل بنا
+
+            </a></li>
+        </ul>
+    </nav>
+    <!--        second logo -->
+
+</section>
+<!-- mobile menu-->
+<section id="nav-mobile">
+    <div class="container">
+        <div class="mobile-logo">
+            <img src="img/second-logo.png" alt="logo">
+            <img src="img/second-logo2.png" alt="logo" class="last-line">
+
+        </div>
+        <div class="nav-top">
+
+            <!--        logo -->
+            <div class="second-logo">
+                <div class="logo wow fadeInUp" data-wow-duration="1.8s" data-wow-delay="1s">
+                    <img src="img/logo.png" alt="logo">
+                </div>
+                <div class="text-second-logo" >
+                    <h2  class="wow fadeInDown" data-wow-duration="1.8s" data-wow-delay="1s" >
+                        <span>التحدى الهرمى
+ </span>
+                        <span>
+                            الفنادق الرقميه
+
+                        </span>
+                    </h2>
+                    <div class="switch-lang">
+                        <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
+                            <a class="lang-text" href="register-new-guest.html">English</a>
+                        </div>
+                        <div class="lang-dropdown">
+                            <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
+                                <a class="lang-text" href="register-new-guest-rtl.html">Arabic</a>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!--          text-second-logo  -->
+                <div class="menu-mobile">
+                    <a class="icon-span">
+                        <i class="fas fa-bars"></i>
+                    </a>
+                </div>
+
+            </div>
+            <div class="quote-text">
+                <p>للحصول على أفضل رؤيه للمحتوى ، أفتح من الكمبيوتر أو اللاب توب
+                </p>
+            </div>
+            <!--        second logo -->
+
+        </div>
+        <div class="addational-register">
+
+            <div class="register btn">
+                <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
+            </div>
+            <div class="sign btn">
+                <a  href="index-rtl.html">دخول حساب فندقى</a>
+            </div>
+        </div>
+        <!--        addational-register-->
+    </div>
+
+
     <nav class=" nav-bottom-mobile">
 
 
@@ -140,203 +228,6 @@
 
             <li>
                 <a href="business-commitment-rtl.html">
-
-
-                    ألتزام العمل
-                    <i class="fas fa-chevron-right"></i>
-
-
-                </a>
-            </li>
-            <li>
-                <a href="https://ar.pyramid-challenge.com/share-post-via-facebook ">
-
-
-                    مشاركة منشور دعائى عبر فيسبوك
-                    <i class="fas fa-chevron-right"></i>
-
-                </a>
-            </li>
-            <li>
-                <a href="https://ar.pyramid-challenge.com/share-video-via-facebook">
-
-                    مشاركة فيديو دعائى عبر فيسبوك
-                    <i class="fas fa-chevron-right"></i>
-                </a>
-            </li>
-
-            <li>
-                <a href="https://ar.pyramid-challenge.com/contact-us ">
-
-                    تغيير كلمة السر للفندق
-                    <i class="fas fa-chevron-right"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://ar.pyramid-challenge.com/share-us-your-idea  ">
-
-
-                    شاركنا فكرتك
-                    <i class="fas fa-chevron-right"></i>
-
-
-                </a>
-            </li>
-
-            <li>
-                <a href="https://ar.pyramid-challenge.com ">
-
-
-                    خروج من حساب فندقى
-                    <i class="fas fa-chevron-right"></i>
-
-
-                </a>
-            </li>
-
-
-
-        </ul>
-    </nav>
-
-</section>
-<!-- mobile menu-->
-<section id="nav-mobile">
-    <div class="container">
-        <div class="mobile-logo">
-            <img src="img/second-logo.png" alt="logo">
-            <img src="img/second-logo2.png" alt="logo" class="last-line">
-
-        </div>
-        <div class="nav-top">
-
-            <!--        logo -->
-            <div class="second-logo">
-                <div class="logo wow fadeInUp" data-wow-duration="1.8s" data-wow-delay="1s">
-                    <img src="img/logo.png" alt="logo">
-                </div>
-                <div class="text-second-logo" >
-                    <h2  class="wow fadeInDown" data-wow-duration="1.8s" data-wow-delay="1s" >
-                        <span>التحدى الهرمى
- </span>
-                        <span>
-                            الفنادق الرقميه
-
-                        </span>
-                    </h2>
-                    <div class="switch-lang">
-                        <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="register-new-guest.html">English</a>
-                        </div>
-                        <div class="lang-dropdown">
-                            <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="register-new-guest-rtl.html">Arabic</a>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-
-                <!--          text-second-logo  -->
-                <div class="menu-mobile">
-                    <a class="icon-span">
-                        <i class="fas fa-bars"></i>
-                    </a>
-                </div>
-
-            </div>
-            <div class="quote-text">
-                <p>للحصول على أفضل رؤيه للمحتوى ، أفتح من الكمبيوتر أو اللاب توب
-                </p>
-            </div>
-            <!--        second logo -->
-
-        </div>
-        <div class="addational-register">
-
-            <div class="register btn">
-                <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
-            </div>
-            <div class="sign btn">
-                <a  href="index-rtl.html">دخول حساب فندقى</a>
-            </div>
-        </div>
-        <!--        addational-register-->
-    </div>
-
-    <nav class=" nav-bottom-mobile">
-
-
-        <ul  >
-
-            <hr>
-
-            <li>
-                <a href="my-hotel-info.html">
-
-
-                    بياناتى
-                    <i class="fas fa-chevron-right"></i>
-
-                </a>
-            </li>
-
-            <li>
-                <a href="hotel-guest.html">
-
-
-                    تقرير بنزلاء فندقى
-                    <i class="fas fa-chevron-right"></i>
-
-
-                </a>
-            </li>
-
-            <li>
-                <a href="cities.html">
-
-
-                    تقرير مُدنى الفندقيه
-                    <i class="fas fa-chevron-right"></i>
-
-                </a>
-            </li>
-
-            <li>
-                <a href="hotel-rooms.html">
-
-
-                    تقرير الغرف الفندقيه
-                    <i class="fas fa-chevron-right"></i>
-
-
-                </a>
-            </li>
-            <li>
-                <a href="https://ar.pyramid-challenge.com/offer-of-the-month ">
-
-
-                    عرض الشهر
-                    <i class="fas fa-chevron-right"></i>
-
-
-                </a>
-
-            </li>
-            <li>
-                <a href="withdraw-profits.html">
-
-
-                    طلب الأرباح
-                    <i class="fas fa-chevron-right"></i>
-
-                </a>
-
-            </li>
-
-
-            <li>
-                <a href="business-commitment.html">
 
 
                     ألتزام العمل
