--- a/hotel-rooms-rtl.html
+++ b/hotel-rooms-rtl.html
@@ -67,138 +67,27 @@
         </div>
 
     </div>
-
-    <nav class=" nav-bottom-mobile">
-
-
+    <nav class="nav-bottom">
         <ul  >
+            <li><a href="https://ar.pyramid-challenge.com/">
+                الرئيسيه
+            </a></li>
+            <li><a href="https://ar.pyramid-challenge.com/about-us">
+                عن الشركه
+            </a></li>
+            <li><a href="https://ar.pyramid-challenge.com/buy-digital-key">
+                شراء مفتاح رقمى
+            </a></li>
+            <li><a href="https://ar.pyramid-challenge.com/ar-faq ">
+                أسئله و أجابه
+            </a></li>
+            <li><a href=" https://ar.pyramid-challenge.com/contact-us">
+                أتصل بنا
 
-            <hr>
-
-            <li>
-                <a href="my-hotel-info-rtl-html.html">
-
-
-                    بياناتى
-                    <i class="fas fa-chevron-right"></i>
-
-                </a>
-            </li>
-
-            <li>
-                <a href="hotel-guest-rtl.html">
-
-
-                    تقرير بنزلاء فندقى
-                    <i class="fas fa-chevron-right"></i>
-
-
-                </a>
-            </li>
-
-            <li>
-                <a href="cities-rtl.html">
-
-
-                    تقرير مُدنى الفندقيه
-                    <i class="fas fa-chevron-right"></i>
-
-                </a>
-            </li>
-
-            <li>
-                <a href="hotel-rooms-rtl.html">
-
-
-                    تقرير الغرف الفندقيه
-                    <i class="fas fa-chevron-right"></i>
-
-
-                </a>
-            </li>
-            <li>
-                <a href="https://ar.pyramid-challenge.com/offer-of-the-month ">
-
-
-                    عرض الشهر
-                    <i class="fas fa-chevron-right"></i>
-
-
-                </a>
-
-            </li>
-            <li>
-                <a href="withdraw-profits-rtl.html">
-
-
-                    طلب الأرباح
-                    <i class="fas fa-chevron-right"></i>
-
-                </a>
-
-            </li>
-
-
-            <li>
-                <a href="business-commitment-rtl.html">
-
-
-                    ألتزام العمل
-                    <i class="fas fa-chevron-right"></i>
-
-
-                </a>
-            </li>
-            <li>
-                <a href="https://ar.pyramid-challenge.com/share-post-via-facebook ">
-
-
-                    مشاركة منشور دعائى عبر فيسبوك
-                    <i class="fas fa-chevron-right"></i>
-
-                </a>
-            </li>
-            <li>
-                <a href="https://ar.pyramid-challenge.com/share-video-via-facebook">
-
-                    مشاركة فيديو دعائى عبر فيسبوك
-                    <i class="fas fa-chevron-right"></i>
-                </a>
-            </li>
-
-            <li>
-                <a href="https://ar.pyramid-challenge.com/contact-us ">
-
-                    تغيير كلمة السر للفندق
-                    <i class="fas fa-chevron-right"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://ar.pyramid-challenge.com/share-us-your-idea  ">
-
-
-                    شاركنا فكرتك
-                    <i class="fas fa-chevron-right"></i>
-
-
-                </a>
-            </li>
-
-            <li>
-                <a href="https://ar.pyramid-challenge.com ">
-
-
-                    خروج من حساب فندقى
-                    <i class="fas fa-chevron-right"></i>
-
-
-                </a>
-            </li>
-
-
-
+            </a></li>
         </ul>
     </nav>
+    <!--        second logo -->
 
 </section>
 <!-- mobile menu-->
@@ -432,15 +321,15 @@
         <div class="options">
             <select class="jp_ir has-custom-focus _1360x" id="comp-kjta1cd8collection" required="">
                 <option >عرض غرف النزلاء في المدن الفندقية الخاصة بك</option>
-                <option >عرض غرف النزلاء بالمدينة رقم: 1</option>
-                <option >عرض غرف النزلاء بالمدينة رقم: 2</option>
-                <option >عرض غرف النزلاء بالمدينة رقم: 3</option>
-                <option >عرض غرف النزلاء بالمدينة رقم: 4</option>
-                <option >عرض غرف النزلاء بالمدينة رقم: 5</option>
-                <option >عرض غرف النزلاء بالمدينة رقم: 6</option>
-                <option >عرض غرف النزلاء بالمدينة رقم: 7</option>
-                <option >عرض غرف النزلاء بالمدينة رقم: 8</option>
-                <option >عرض غرف النزلاء بالمدينة رقم: 9</option>
+                <option >عرض غرف النزلاء بالمدينة رقم:  1</option>
+                <option >عرض غرف النزلاء بالمدينة رقم:  2</option>
+                <option >عرض غرف النزلاء بالمدينة رقم:  3</option>
+                <option >عرض غرف النزلاء بالمدينة رقم:  4</option>
+                <option >عرض غرف النزلاء بالمدينة رقم:  5</option>
+                <option >عرض غرف النزلاء بالمدينة رقم:  6</option>
+                <option >عرض غرف النزلاء بالمدينة رقم:  7</option>
+                <option >عرض غرف النزلاء بالمدينة رقم:  8</option>
+                <option >عرض غرف النزلاء بالمدينة رقم:  9</option>
                 <option >عرض غرف النزلاء بالمدينة رقم: 10</option></select>
         </div>
 
@@ -457,7 +346,7 @@
                 <th>تاريخ فتح الغرفه </th>
                 <th>بلد النزيل </th>
                 <th>مسجل في الفندق برقم </th>
-                <th>عدد نزلاء الفندق </th>
+                <th>عدد نزلاء فندقه  </th>
 
             </tr>
             <tr>
