--- a/register-new-guest-rtl-2.html
+++ b/register-new-guest-rtl-2.html
@@ -307,8 +307,7 @@
     <div class="form-title">
 
         <p>
-        : لقد تم دعوتك من خلال رقم فندق
-                       <span>
+لقد تم دعوتك من خلال رقم الفندق :                       <span>
             1234567890
         </span>
         </p>
@@ -322,15 +321,15 @@
             </div>
             <div class="form-group ">
                 <label for="password"></label>
-                <input type="password" class="form-control"  id="password" placeholder="ضع-كلمة السر لفندقك " required>
+                <input type="password" class="form-control"  id="password" placeholder="ضع كلمة السر لفندقك " required>
             </div>
             <div class="form-group">
                 <label for="passwords"></label>
-                <input type="password" class="form-control"  id="passwords" placeholder="أعد-كلمة السر لفندقك" required>
+                <input type="password" class="form-control"  id="passwords" placeholder="أعد كلمة السر لفندقك" required>
             </div>
             <div class="form-group">
                 <label for="frist-name"></label>
-                <input type="text" class="form-control"  id="frist-name" placeholder="أكتب-أسمك الأول" required>
+                <input type="text" class="form-control"  id="frist-name" placeholder="أكتب أسمك الأول" required>
             </div>
             <div class="form-group">
                 <label for="middle"></label>
@@ -338,7 +337,7 @@
             </div>
             <div class="form-group">
                 <label for="last-name"></label>
-                <input type="text" class="form-control"  id="last-name" placeholder="أكتب-لقب العائله" required>
+                <input type="text" class="form-control"  id="last-name" placeholder="أكتب لقب العائله" required>
             </div>
             <div class="form-group">
                 <label for="email"></label>
@@ -346,7 +345,7 @@
             </div>
             <div class="form-group">
                 <label for="phone"></label>
-                <input type="text" class="form-control"  id="phone" placeholder="أدخل-رقم هاتفك" required>
+                <input type="text" class="form-control"  id="phone" placeholder="أدخل رقم هاتفك" required>
             </div>
             <div class="form-group" >
                 <div id="inline" data-date="01/05/2020" >
@@ -357,7 +356,7 @@
             </div>
             <div class="form-group">
                 <label for="country"></label>
-                <input type="text" class="form-control"  id="country" placeholder="حدد-بلدك أو منطقة بلدك" required>
+                <input type="text" class="form-control"  id="country" placeholder="حدد بلدك أو منطقة بلدك" required>
             </div>
 
             <div class="form-group checkbox-group">
@@ -377,14 +376,14 @@
                 <div class="options">
                     <select class="jp_ir has-custom-focus _1360x" id="comp-kjta1cd8collection" required>
                         <option>حدد اهدافك (اختار حلمك)</option>
-                        <option > Buy A Car</option>
-                        <option >Buy A House</option>
-                        <option >Paying Off Debts</option>
-                        <option >Traveling Around The World</option>
-                        <option >Paying Education Costs</option>
-                        <option >Saving Marriage Costs</option>
-                        <option >Charitable Work</option>
-                        <option >Just For Saving Money</option>
+                        <option > شراء سياره</option>
+                        <option > شراء منزل</option>
+                        <option > سداد ديون</option>
+                        <option >السفر حول العالم</option>
+                        <option >دفع تكاليف تعليم</option>
+                        <option >توفير مصاريف للزواج</option>
+                        <option >أعمال خيريه</option>
+                        <option >فقط لأدخار المال</option>
 
                     </select>
                 </div>
@@ -401,7 +400,7 @@
                         <option >$ 50,000</option>
                         <option >$ 300,000</option>
                         <option >$ 1,000,000</option>
-                        <option >$ Open Limit</option>
+                        <option >$ سقف مفتوح </option>
 
                     </select>
                 </div>
