--- a/withdraw-profits-rtl.html
+++ b/withdraw-profits-rtl.html
@@ -331,7 +331,7 @@
                      </li>
                      <li>
                          <a href="#">
-                             لأرباح المتبقيه :<span> xxx</span>
+                            الأرباح المتبقية :<span> xxx</span>
                          </a>
                      </li>
                  </ul>
