--- a/my-hotel-info-rtl-html.html
+++ b/my-hotel-info-rtl-html.html
@@ -306,7 +306,7 @@
         </div>
         <div class="section-title">
             <h2  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"><a href="#">
-                :بيانات الفندق
+                بيانات الفندق :
             </a></h2>
         </div>
         <div class="hotel-info">
