added last modication before meeting

--- a/business-commitment-rtl.html
+++ b/business-commitment-rtl.html
@@ -532,62 +532,64 @@
 <!-- Table -->
 <section class="hotel-guest">
     <div class="container">
+        <div id="rtl-direction">
+            <table>
+                <tr>
 
-        <table>
-            <tr>
+                    <th>عدد نزلاء فندقك</th>
+                    <th>سقف ارباح فندقك</th>
 
-                <th>عدد نزلاء فندقك</th>
-                <th>سقف ارباح فندقك</th>
-
-            </tr>
-            <tr>
-                <td>نزيل واحد</td>
-                <td>$100</td>
-
-
-            </tr>
-            <tr>
-                <td>2 نزلاء</td>
-                <td>$1000</td>
+                </tr>
+                <tr>
+                    <td>1 نزيل </td>
+                    <td>$100</td>
 
 
-            </tr>
-            <tr>
-                <td>3 نزلاء</td>
-                <td>$30,000</td>
+                </tr>
+                <tr>
+                    <td>2 نزلاء</td>
+                    <td>$1000</td>
 
 
-            </tr>
-            <tr>
-                <td> 4 نزلاء</td>
-                <td>$40,000</td>
+                </tr>
+                <tr>
+                    <td>3 نزلاء</td>
+                    <td>$30,000</td>
 
 
-            </tr>
-            <tr>
-                <td>5 نزلاء</td>
-                <td>$50,000</td>
+                </tr>
+                <tr>
+                    <td> 4 نزلاء</td>
+                    <td>$40,000</td>
 
 
-            </tr>
-            <tr>
-                <td>ستة نزلاء</td>
-                <td>$300,000</td>
+                </tr>
+                <tr>
+                    <td>5 نزلاء</td>
+                    <td>$50,000</td>
 
 
-            </tr>
-            <tr>
-                <td> سبعة نزلاء</td>
-                <td>$1,000,000</td>
+                </tr>
+                <tr>
+                    <td>6 نزلاء</td>
+                    <td>$300,000</td>
 
-            </tr>
-            <tr>
-                <td>أكثر من سبعة نزلاء</td>
-                <td>$ سقف مفتوح </td>
 
-            </tr>
+                </tr>
+                <tr>
+                    <td> 7 نزلاء</td>
+                    <td>$1,000,000</td>
 
-        </table>
+                </tr>
+                <tr>
+                    <td>أكثر من سبعة نزلاء</td>
+                    <td>$ سقف مفتوح </td>
+
+                </tr>
+
+            </table>
+        </div>
+
     </div>
 </section>
 <!--end of table -->
