--- a/my-hotel-info-rtl-html.html
+++ b/my-hotel-info-rtl-html.html
@@ -298,7 +298,7 @@
 <section id="sections">
     <!--
     -->
-    <div class="container-rtl">
+    <div class="container-rtl" id="container-rtl">
         <div class="section-back wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
             <a href="about-us-rtl.html">
                 الرجوع لأقسام الفندق
