--- a/register-new-guest-rtl-2.html
+++ b/register-new-guest-rtl-2.html
@@ -333,7 +333,7 @@
             </div>
             <div class="form-group">
                 <label for="middle"></label>
-                <input type="text" class="form-control"  id="middle" placeholder="- أكتب أسم الأب" required>
+                <input type="text" class="form-control"  id="middle" placeholder="أكتب أسم الأب" required>
             </div>
             <div class="form-group">
                 <label for="last-name"></label>
@@ -341,7 +341,7 @@
             </div>
             <div class="form-group">
                 <label for="email"></label>
-                <input type="email" class="form-control"  id="email" placeholder="-أدخل بريدك الألكترونى" required>
+                <input type="email" class="form-control"  id="email" placeholder="أدخل بريدك الألكترونى" required>
             </div>
             <div class="form-group">
                 <label for="phone"></label>
