added links and modify

--- a/business-commitment-rtl.html
+++ b/business-commitment-rtl.html
@@ -582,7 +582,7 @@
 
                 </tr>
                 <tr>
-                    <td>أكثر من سبعة نزلاء</td>
+                    <td>أكثر من 7 نزلاء</td>
                     <td>$ سقف مفتوح </td>
 
                 </tr>
