--- a/chnage-pass.html
+++ b/chnage-pass.html
@@ -40,11 +40,11 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <p class="lang-text">English</p>
+                        <a class="lang-text" href="chnage-pass.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <p class="lang-text">Arabic</p>
+                            <a class="lang-text" href="change-pass-rtl.html">Arabic</a>
                         </div>
 
                     </div>
@@ -105,15 +105,16 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <p class="lang-text">English</p>
+                            <a class="lang-text" href="chnage-pass.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <p class="lang-text">Arabic</p>
+                                <a class="lang-text" href="change-pass-rtl.html">Arabic</a>
                             </div>
 
                         </div>
                     </div>
+
                 </div>
 
                 <!--          text-second-logo  -->
