--- a/register-new-guest.html
+++ b/register-new-guest.html
@@ -38,11 +38,11 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <p class="lang-text">English</p>
+                        <a class="lang-text" href="register-new-guest.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <p class="lang-text">Arabic</p>
+                            <a class="lang-text" href="register-new-guest-rtl.html">Arabic</a>
                         </div>
 
                     </div>
@@ -103,11 +103,11 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <p class="lang-text">English</p>
+                            <a class="lang-text" href="register-new-guest.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <p class="lang-text">Arabic</p>
+                                <a class="lang-text" href="register-new-guest-rtl.html">Arabic</a>
                             </div>
 
                         </div>
