--- a/hotel-rooms-rtl.html
+++ b/hotel-rooms-rtl.html
@@ -345,7 +345,7 @@
                 <th>رقم الغرفه </th>
                 <th>تاريخ فتح الغرفه </th>
                 <th>بلد النزيل </th>
-                <th>مسجل في الفندق برقم </th>
+                <th>مسجل في الفندق رقم </th>
                 <th>عدد نزلاء فندقه  </th>
 
             </tr>
