--- a/register-new-guest-rtl-2.html
+++ b/register-new-guest-rtl-2.html
@@ -347,6 +347,11 @@
                 <label for="phone"></label>
                 <input type="text" class="form-control"  id="phone" placeholder="أدخل رقم هاتفك" required>
             </div>
+
+            <div class="form-group">
+                <label for="country"></label>
+                <input type="text" class="form-control"  id="country" placeholder="حدد بلدك أو منطقة بلدك" required>
+            </div>
             <div class="form-group" >
                 <div id="inline" data-date="01/05/2020" >
                     <label for="datepicker"></label>
@@ -354,28 +359,24 @@
                 </div>
 
             </div>
-            <div class="form-group">
-                <label for="country"></label>
-                <input type="text" class="form-control"  id="country" placeholder="حدد بلدك أو منطقة بلدك" required>
-            </div>
-
             <div class="form-group checkbox-group">
-                <div class="checkbox">
-                    <input type="checkbox" name="male" required>
-                    <span> نوع/ذكر</span>
-
-                </div>
                 <div class="checkbox">
                     <input type="checkbox" name="female" required>
                     <span>نوع/أنثي </span>
 
                 </div>
+                <div class="checkbox">
+                    <input type="checkbox" name="male" required>
+                    <span> نوع/ذكر</span>
+
+                </div>
+
             </div>
 
             <div class="form-group">
                 <div class="options">
                     <select class="jp_ir has-custom-focus _1360x" id="comp-kjta1cd8collection" required>
-                        <option>حدد اهدافك (اختار حلمك)</option>
+                        <option>حدد هدفك (اختار حلمك)</option>
                         <option > شراء سياره</option>
                         <option > شراء منزل</option>
                         <option > سداد ديون</option>
