--- a/withdraw-profits-rtl.html
+++ b/withdraw-profits-rtl.html
@@ -357,7 +357,7 @@
             </div>
             <div class="form-group ">
                 <label for="password"></label>
-                <input type="text" class="form-control"  id="password" placeholder="-أدخل حساب باى بال لأستلام المبلغ">
+                <input type="text" class="form-control"  id="password" placeholder="أدخل حساب باى بال لأستلام المبلغ">
             </div>
 
             <button class="change " >طلب الأرباح </button>
