--- a/hotel-guest-rtl.html
+++ b/hotel-guest-rtl.html
@@ -412,13 +412,13 @@
     <div class="container">
         <div class="copyright">
             <h3>
-                <a href="https://www.pyramid-challenge.com/terms-conditions">
-                    Copyright© Direct. All Rights Reserved.terms&conditions
+                <a href="https://ar.pyramid-challenge.com/terms-conditions ">
+                    شركة دايركت © جميع الحقوق محفوظه . شروط و بنود
                 </a>
             </h3>
         </div>
         <div class="copyright-logo">
-            <a href="https://www.pyramid-challenge.com/terms-conditions">
+            <a href="https://ar.pyramid-challenge.com/terms-conditions ">
                 <img src="img/footer-logo.png"  class="wow fadeInLeft" data-wow-duraton="2s"  alt="footer-logo">
             </a>
         </div>
