--- a/hotel-rooms.html
+++ b/hotel-rooms.html
@@ -247,7 +247,7 @@
             </li>
 
             <li>
-                <a href="https://www.pyramid-challenge.com/contact-us">
+                <a href="chnage-pass.html">
 
                     Change Hotel Password
                     <i class="fas fa-chevron-right"></i>
