--- a/my-hotel-info-rtl-html.html
+++ b/my-hotel-info-rtl-html.html
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
+                    <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
                     <a  href="index-rtl.html">
@@ -148,7 +148,7 @@
         <div class="addational-register">
 
             <div class="register btn">
-                <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
+                <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
                 <a  href="index-rtl.html">دخول حساب فندقى</a>
