added more links and modify it according to 56 messages 20/3/2021

--- a/my-hotel-info-rtl-html.html
+++ b/my-hotel-info-rtl-html.html
@@ -256,7 +256,7 @@
             </li>
 
             <li>
-                <a href="https://ar.pyramid-challenge.com/contact-us ">
+                <a href="change-pass-rtl.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
