--- a/register-new-guest-rtl-2.html
+++ b/register-new-guest-rtl-2.html
@@ -149,7 +149,7 @@
         <div class="addational-register">
 
             <div class="register btn">
-                <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
+                <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
                 <a  href="index-rtl.html">دخول حساب فندقى</a>
@@ -257,7 +257,7 @@
             </li>
 
             <li>
-                <a href="https://ar.pyramid-challenge.com/contact-us ">
+                <a href="change-pass-rtl.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
