--- a/about-us-rtl.html
+++ b/about-us-rtl.html
@@ -254,7 +254,7 @@
             </li>
 
             <li>
-                <a href="https://ar.pyramid-challenge.com/contact-us ">
+                <a href="change-pass-rtl.html ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
