added more links and push words to right

--- a/withdraw-profits-rtl.html
+++ b/withdraw-profits-rtl.html
@@ -303,7 +303,7 @@
        <div class="container">
            <div class="hotel-info">
                <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                   <a href="#">
+                   <a href="#" id="withdraw-title">
                        طلب الأرباح
                    </a>
                </h3>
