added more features and last Touch Inshallah

--- a/cities-rtl.html
+++ b/cities-rtl.html
@@ -297,6 +297,7 @@
 
 <!-- start of form-->
 <section id="sections-hotel">
+<div id="cities">
     <div class="container">
         <div class="section-back">
             <a href="about-us-rtl.html">الرجوع أقسام الفندق </a>
@@ -306,12 +307,13 @@
         <div class="hotel-info">
             <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <a href="#">
-                 تقرير المدن الفندقية
+                    تقرير المدن الفندقية
                 </a>
             </h3>
 
         </div>
     </div>
+</div>
 </section>
 <!--
 
