--- a/hotel-rooms-rtl.html
+++ b/hotel-rooms-rtl.html
@@ -116,11 +116,11 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="index.html">English</a>
+                            <a class="lang-text" href="hotel-rooms.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="index-rtl.html">Arabic</a>
+                                <a class="lang-text" href="hotel-rooms-rtl.html">Arabic</a>
                             </div>
 
                         </div>
@@ -162,7 +162,7 @@
             <hr>
 
             <li>
-                <a href="my-hotel-info.html">
+                <a href="my-hotel-info-rtl-html.html">
 
 
                     بياناتى
@@ -172,7 +172,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest.html">
+                <a href="hotel-guest-rtl.html">
 
 
                     تقرير بنزلاء فندقى
@@ -183,7 +183,7 @@
             </li>
 
             <li>
-                <a href="cities.html">
+                <a href="cities-rtl.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -193,7 +193,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms.html">
+                <a href="hotel-rooms-rtl.html">
 
 
                     تقرير الغرف الفندقيه
@@ -214,7 +214,7 @@
 
             </li>
             <li>
-                <a href="withdraw-profits.html">
+                <a href="withdraw-profits-rtl.html">
 
 
                     طلب الأرباح
@@ -226,7 +226,7 @@
 
 
             <li>
-                <a href="business-commitment.html">
+                <a href="business-commitment-rtl.html">
 
 
                     ألتزام العمل
