--- a/about-us.html
+++ b/about-us.html
@@ -49,6 +49,7 @@
 
                     </div>
                 </div>
+
                 <div class="register btn">
                     <a  href="register-new-guest.html">Register New Guest</a>
                 </div>
@@ -105,15 +106,16 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <p class="lang-text">English</p>
+                            <a class="lang-text" href="about-us.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <p class="lang-text">Arabic</p>
+                                <a class="lang-text" href="about-us-rtl.html">Arabic</a>
                             </div>
 
                         </div>
                     </div>
+
                 </div>
 
                 <!--          text-second-logo  -->
